@@ -13,6 +13,8 @@ Here is a history of user visible changes to Mailman.
 
   Bug Fixes and other patches
 
+    - Added bounce recognition for a bogus Dovecot MDN.  Bug #693134.
+
     - Fixed a problem where an emailed command in the Subject: header with a
       non-ascii l10n of an 'Re:' prefix is ignored.  Bug #685261.
 
